challenges of text mining

--- a/content/10_Text-Mining.ipynb
+++ b/content/10_Text-Mining.ipynb
@@ -1156,22 +1156,57 @@
     "\n",
     "There are also more complex techniques that can be used. A simple extension of the bag-of-words that accounts at least to some degree for the context and structure is to use $n$-grams instead of words. A $n$-gram consists of subsequences of $n$ words. Thus, we do not count how often words occur anymore, but rather how often sequences of words occur. The drawbacks of $n$-grams is that the chance that it is unlikely that $n$-grams for larger values of $n$ occur more than once, because this would require the exact same wording. Thus, $n$-grams may be needlessly specific and, therefore, hinder generalization. Moreover, the number of $n$-grams growths exponentially with $n$. Thus, this approach only works to capture the direct context of a word. \n",
     "\n",
-    "A recent approach is to use *word embeddings* instead of the bag-of-words. Word embeddings transform words into a high dimensional space (e.g., the $\\mathbb{R}^d}) such that similar words are close to each other in the embedded space. State-of-the-art word embeddings like BERT can also take the context of words into account and, thereby, further improve the similarity. The word embeddings themselves are learned through deep neural networks with a *transformer* architecture using huge amounts of textual data. "
+    "A recent approach is to use *word embeddings* instead of the bag-of-words. Word embeddings transform words into a high dimensional space (e.g., the $\\mathbb{R}^d$) such that similar words are close to each other in the embedded space. State-of-the-art word embeddings like BERT can also take the context of words into account and, thereby, further improve the similarity. The word embeddings themselves are learned through deep neural networks with a *transformer* architecture using huge amounts of textual data. "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Challenges\n",
     "\n",
+    "The difficulties with text mining do not stop, just because we now have a numeric representation of the text that we can use as input for algorithms. There are many other problems, many of them not yet solved, that make text mining into such a hard problem. \n",
+    "\n",
     "### Dimensionality\n",
+    "\n",
+    "The first problem is the dimensionality. In our example of just eight tweets, we already have 70 different terms after preprocessing. In longer text, there are several thousand unique terms, even after preprocessing. Thus, there is a huge amount of categorical features. However, not only the number of features may be very large, the number of documents can also be very large. For example, there are already over 50,000 tweets by Donald Trump (June 2020), and hundreds of millions of tweets every day. \n",
+    "\n",
+    "The combination of many features and many instances means that text mining can consume huge amounts of runtime. Therefore, large text mining applications only work with efficiently implemented algorithms, often on dedicated hardware that allows for massive parallelization. These requirements are also the reason why an algorithm that scales well with large amounts of data, like Multinomial Naive Bayes, is still a popular choice for text mining. \n",
     "\n",
     "### Ambiguities\n",
     "\n",
-    "### Syntax and Semantic\n",
+    "The second problem is that natural language if often ambiguous. Partially, this cannot be solved, because natural language is, unless used with great care, imprecise and the exact meaning is often only understandable from a very broad context. For example, the following sentence can have a different meaning, that can only be understood from the context.\n",
     "\n",
-    "### Parsing"
+    "- I hit a man with a stick. (I used a stick to hit a man.)\n",
+    "- I hit a man with a stick. (I hit the man who was holding a stick.)\n",
+    "\n",
+    "Such problems are often impossible to resolve and lead to noise in the analysis. \n",
+    "\n",
+    "Other problems with ambiguities are to some degree solvable, but may also lead to noise in the analysis, especially with a bag-of-words. *Homonyms* are words with multiple meanings. For example, *break* can mean *to break something*, but also *take a break*. The bag-of-words does not differentiate between these meanings. Other approaches, such as $n$-grams and word embeddings can, to some degree, account for this, but also not perfectly. \n",
+    "\n",
+    "There are also syntactic ambiguities, where the meaning changes depending on the syntactic structure of a sentence. The following nine-word sentence uses the word *only* in every possible position. The meaning changes with every position. \n",
+    "\n",
+    "- Only he told his mistress that he loved her. (Nobody else did.)\n",
+    "- He only told his mistress that he loved her. (He didn't show her.)\n",
+    "- He told only his mistress that he loved her. (Kept it a secret from everyone else.)\n",
+    "- He told his only mistress that he loved her. (Stresses that he had only ONE!)\n",
+    "- He told his mistress only that he loved her. (Didn't tell her anything else.)\n",
+    "- He told his mistress that only he loved her. (\"I'm all you got, nobody else wants you.\")\n",
+    "- He told his mistress that he only loved her. (Not that he wanted to marry her.)\n",
+    "- He told his mistress that he loved only her. (Yeah, don't they all...)\n",
+    "- He told his mistress that he loved her only. (Similar to above one.)\n",
+    "\n",
+    "### And Many More\n",
+    "\n",
+    "Above, we discussed some examples in detail. There are many others, for example the following. \n",
+    "\n",
+    "- Bad spelling which leads to unknown words. \n",
+    "- The evolution of language, especially in form of new words or slang. \n",
+    "- Imperfection of preprocessing approaches, e.g., synonyms that are not part of the wordlist for lemmatization. \n",
+    "- The parsing of text, which have different encodings and character sets (Chinese, Japanese, Korean, Arabic, Latin, ...)\n",
+    "\n",
+    "This also means that text mining applications are, at least currently, never finished, because there are always more unsolved problems with textual data. Users of text mining must be aware of this, because otherwise projects may never finish. At some point, a decision must be made that the remaining problems are not within the scope of a project and the performance of a text mining approach is sufficient. "
    ]
   }
  ],
