added text mining exercise

--- a/content/Exercises.ipynb
+++ b/content/Exercises.ipynb
@@ -15,7 +15,8 @@
     "- [Clustering](exercises/Exercise_Clustering)\n",
     "- [Classification](exercises/Exercise_Classification)\n",
     "- [Regression](exercises/Exercise_Regression)\n",
-    "- [Time Series Analysis](exercises/Exercise_Time_Series_Analysis)"
+    "- [Time Series Analysis](exercises/Exercise_Time_Series_Analysis)\n",
+    "- [Text Mining](exercises/Exercise_Text_Mining)"
    ]
   }
  ],
