solution for text mining exercise

--- a/content/Solutions.ipynb
+++ b/content/Solutions.ipynb
@@ -14,7 +14,8 @@
     "- [Clustering](exercises/Solution_Clustering)\n",
     "- [Classification](exercises/Solution_Classification)\n",
     "- [Regression](exercises/Solution_Regression)\n",
-    "- [Time Series Analysis](exercises/Solution_Time_Series_Analysis)"
+    "- [Time Series Analysis](exercises/Solution_Time_Series_Analysis)\n",
+    "- [Text Mining](exercises/Solution_Text_Mining)"
    ]
   }
  ],
