--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -59,7 +59,7 @@
     "- Chapter 7: Finished.\n",
     "- Chapter 8: Draft finished, requires proof reading.\n",
     "- Chapter 9: Draft finished, requires proof reading.\n",
-    "- Chapter 10: Work in progress.\n",
+    "- Chapter 10: Draft finished, requires proof reading.\n",
     "- Chapter 11: Not available.\n",
     "- Chapter 12: Not available.\n",
     "- Exercises: Work in progress.\n",
