skeleton for chapter 11

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -60,7 +60,7 @@
     "- Chapter 8: Draft finished, requires proof reading.\n",
     "- Chapter 9: Draft finished, requires proof reading.\n",
     "- Chapter 10: Draft finished, requires proof reading.\n",
-    "- Chapter 11: Not available.\n",
+    "- Chapter 11: Work in progress.\n",
     "- Chapter 12: Not available.\n",
     "- Exercises: Work in progress.\n",
     "- Appendix: Work in progress.\n",
