start of hypothesis testing

--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistics"
+    "# Statistics\n",
+    "\n",
+    "## Motivation\n",
+    "\n",
+    "So far, we have often looked at data. For example, in [Chapter 3](03_Data-Exploration) we visually analyzed the distributions of data. Below are two histograms of data that we could also visually analyze."
    ]
   },
   {
@@ -60,7 +64,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis Testing"
+    "The histogram on the left looks like it has a bell shape, which indicates that the data may be normal. However, we cannot be sure, without additional analysis. It could would also be possible that the data just randomly looks like that, i.e., is some outlier and that the data is not really normal. \n",
+    "\n",
+    "The histogram on the left shows two samples, to which we refer in the following as \"blue\" and \"orange\". Both look similar, but it looks like the mean value of the blue data may be a bit smaller than that of the orange data. However, this could also just be a random effect, and there is no real difference. \n",
+    "\n",
+    "Statistics gives us the methods we need to get (probabilistic) answers to these questions. Within this Chapter, we give a short introduction into the (quite large) world of statistics. Upon completion of this chapter, you should know what hypothesis testing is, how this can be used correctly, and why hypothesis testing is often not useful, if used without additional statistical tools like effect size and confidence intervals. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypothesis Testing\n",
+    "\n",
+    "Hypothesis testing is the primary tool of *frequentist statistics*. The idea behind hypothesis testing is the following. If we have certain assumptions on the data, we can formulate these assumptions as an hypothesis about the data. We always have two hypothesis, the *null hypothesis* and the *alternative hypothesis*. \n",
+    "\n",
+    "- Null Hypothesis ($H_0$): Assumption of the test holds and is failed to be rejected at some level of significance.\n",
+    "- Alternative Hypothesis ($H_1$, $H_a$): Assumption of the test does not hold and is rejected at some level of significance.\n",
+    "\n",
+    "The question is, what these abstract concept mean. What exactly is the assumption of a test? What does \"(failed to be) rejected at some level of significance\" mean? Since these questions are often misunderstood and misused, we explain them using the example of the $t$-test. \n",
+    "\n",
+    "### $t$-Test\n",
+    "\n",
+    "The $t$-Test can be seen as the father of all statistical tests and was first introduced by William Gosset under the pseodonym \"Student\". This oldest version of the test and the related probability distribution are there called Student's $t$-Test and Student's distribution. Here, we consider a newer variant of the $t$-Test, i.e., Welch's $t$-Test. Welch's $t$-Test has the following null and alternative hypotheses: \n",
+    "\n",
+    "- $H_0$: The means of two normally distributed populations $X_1$ and $X_2$ are equal.\n",
+    "- $H_a$: $X_1$ and $X_2$ are not from two normally distributed populations with equal mean values.\n",
+    "\n",
+    "Thus, this test can be used to determine if two normally distributed populations have the same mean value. This is relevant in many use cases, e.g., to answer questions like \"does this medication improve the health\" or \"is my deep neural network better than a random forest\". Please note that the alternative hypothesis of the $t$-Test is not that the mean values are different. Only if both distributions are normal, this would mean that the mean values are different. If one of the populations is not normally distributed, we do not know whether the null hypothesis was rejected because the data was not normal or because the means are different. This misinterpretation of alternative hypothesis is one of the common mistakes when hypothesis testing is used. \n",
+    "\n",
+    "In order to determine evaluate whether the null hypothesis holds, hypothesis testing evaluates *how likely the data is, given the hypothesis*. For the $t$-Test this means that we want to calculate how likely it is that we observe the populations $X_1$ and $X_2$, in case both are normally distributed with the same mean value. This probability is the infamous *$p$-value*.\n",
+    "\n",
+    "To determine the p-value, we need the probability density function of a test statistic. In case of the $t$-Test, this is Student's $t$-Distribution."
    ]
   },
   {
@@ -97,6 +133,17 @@
     "plt.xlim(-5,5)\n",
     "plt.plot(x,y)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This distribution looks similar to the normal distribution, the difference is that the tails are a bit longer than those of the normal distribution. Student's $t$-distribution is defined as the distribution of the  deviation of the arithmetic mean of a sample drawn from a standard normal distribution with a mean value of 0 and a standard deviation of 1 deviates. Thus, the $t$-Distribution tells us how much deviation of the mean values between two samples drawn from a standard normal distributions we can expect. This is directly related to the likelihood of the data, given the hypothesis that data is normal. \n",
+    "\n",
+    "The difference we still have is that the $t$ distribution is for a specific mean value and standard deviation, while our hypothesis is for normal distributions with any mean value and standard distribution. \n",
+    "\n",
+    "$$t = \\frac{mean(X_1)-mean(X_2)}{\\sqrt{\\frac{sd(X_1)^2}{N_1}+\\frac{sd(X_2)}{N_2}}}$$"
    ]
   },
   {
@@ -220,7 +267,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
